<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/value_to_convert"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/value_to_convert"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/conversion_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_conversion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value_to_convert" />

    <RadioGroup
        android:id="@+id/conversion_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/fahrenheit_to_celsius"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conversion_question">


        <RadioButton
            android:id="@+id/fahrenheit_to_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_to_celsius" />

        <RadioButton
            android:id="@+id/celsius_to_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_to_fahrenheit" />

        <RadioButton
            android:id="@+id/dollars_to_euros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollars_to_euros" />

    </RadioGroup>


    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conversion_options" />

    <TextView
        android:id="@+id/conversion_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Result: 0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>